--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "start": "babel-node index.js"
+    "start": "babel-node server.js"
   },
   "repository": {
     "type": "git",
@@ -33,6 +33,7 @@
     "prettier": "2.7.1"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "supertest": "^6.3.3"
   }
 }
